<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DroidDice 2</string>
    <string name="app_name_lite">DroidDice Lite</string>
    <string name="app_name_pro">DroidDice Pro</string>
    <string name="roll">Roll</string>
    <string name="change">Edit</string>
    <string name="edit_button_description">edit</string>
    <string name="dummy_text">dummy</string>
    <string name="dummy_result">12</string>
    <!-- string name="dummy_name">Than: Telekinesis Activate</string -->
    <string name="dummy_name">Fighting</string>
    <dimen name="bottom_button_height">100dp</dimen>
    <string name="create">New</string>
    <string name="move_left">&lt;</string>
    <string name="move_right">></string>
    <string name="pick_button_text">&#8230;</string>
    <string name="delete">Delete</string>
    <string name="empty_pick_list">"No dice  sets saved. "</string>
    <string name="com.droiddice.lite.name">DroidDice Lite</string>
    <string name="com.droiddice.pro.name">DroidDice Pro</string>
    
</resources>
