<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/roll_activity_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/window_title" />

    <TextView
        android:id="@+id/dice_result_text"
        style="@style/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dummy_result" />

    <GridView
        android:id="@+id/dice_layout"
        style="@style/dice_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="0.10"
        android:gravity="center" >
    </GridView>

    <LinearLayout
        android:id="@+id/dice_set_history"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dice_set_item_0"
            style="@style/recent_pick_button"
            android:text="@string/dummy_name" />

        <Button
            android:id="@+id/dice_set_item_1"
            style="@style/recent_pick_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_name" />

        <Button
            android:id="@+id/dice_set_item_2"
            style="@style/recent_pick_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_name" />

        <ImageButton
            android:id="@+id/dice_sets_selection_button"
            style="@style/recent_pick_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/roll_activity_change_button"
            style="@style/action_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/change" />

        <Button
            android:id="@+id/roll_activity_new_button"
            style="@style/action_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/create" />

        <Button
            android:id="@+id/roll_activity_roll_button"
            style="@style/action_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/roll" />
    </LinearLayout>

</LinearLayout>