<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rollActivityLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <include
        android:id="@+id/include1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        layout="@layout/window_title" />

    <TextView
        android:id="@+id/diceResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:shadowColor="#000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="0.1"
        android:text="@string/dummy_result"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="72sp" />

    <GridView
        android:id="@+id/diceLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rollActivityButtonLayout"
        android:layout_below="@+id/diceResultText"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="0.10"
        android:gravity="center"
        android:numColumns="4" >
    </GridView>

	<View android:id="@+id/strut"
        android:layout_width="0dp"
        android:layout_height="0dp" 
        android:layout_centerHorizontal="true"/>

	<Button
	    android:id="@+id/rollActivityRollButton"
	    style="@style/action_button"
	    android:layout_width="0dp"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_alignRight="@id/strut"
	    android:layout_weight="1"
	    android:text="@string/roll" />
    
    <Button
        android:id="@+id/rollActivityChangeButton"
        style="@style/action_button"
        android:layout_width="0dp"
        android:layout_alignLeft="@id/strut"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_weight="1"
        android:text="@string/change" />

</RelativeLayout>